Added update user role API
