# src/controllers/system-setup-controllers/index.js
@@ -4,6 +4,7 @@ import { verifyUserRoleExist, registerNewUserRole } from './registerUserRole.con
 import { getUserRoleById, getAllUserRoles } from './getUserRole.controller.js';
 import { verifyUserScopeExist, registerNewUserScope } from './registerUserScope.controller.js';
 import { getUserScopeById, getAllUserScopes } from './getUserScope.controller.js';
+import { updateUserRoleDtl, updateRoleDefault } from './updateUserRole.controller.js';
 
 export default {
   verifyUserRoleExist,
@@ -14,4 +15,6 @@ export default {
   registerNewUserScope,
   getUserScopeById,
   getAllUserScopes,
+  updateUserRoleDtl,
+  updateRoleDefault,
 };
