# src/index.js
@@ -22,6 +22,7 @@ class AccountService extends Service {
     this.app.post(`${SVC_API}/setup/role`, routes.settingRoutes.registerUserRole);
     this.app.get(`${SVC_API}/setup/role`, routes.settingRoutes.getUserRole);
     this.app.get(`${SVC_API}/setup/role/:roleId`, routes.settingRoutes.getUserRole);
+    this.app.put(`${SVC_API}/setup/role/:roleId`, routes.settingRoutes.updateUserRole);
 
     // User Scope Routes
     this.app.post(`${SVC_API}/setup/scope`, routes.settingRoutes.registerUserScope);
