# src/routes/system-setup-routes/index.js
@@ -4,10 +4,12 @@ import registerUserRole from './registerUserRole.route.js';
 import getUserRole from './getUserRole.route.js';
 import registerUserScope from './registerUserScope.route.js';
 import getUserScope from './getUserScope.route.js';
+import updateUserRole from './updateUserRole.route.js';
 
 export default {
   registerUserRole,
   getUserRole,
   registerUserScope,
   getUserScope,
+  updateUserRole,
 };
